# otus_cpp_4_sfinae

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  print_ip_file.cpp
.github/workflows/: release.yml
